hard-gists/6260dd97a3e39eba9cd6/run.log
=== Docker Run Log for 6260dd97a3e39eba9cd6 ===
Started at: Mi 29. Okt 16:27:16 CET 2025

[2025-10-29 16:27:16] START: Running container for 6260dd97a3e39eba9cd6
[2025-10-29 16:27:17] SUCCESS: Container 411344e932ec4617b399c12d9787759d3f0e0a45843c569f5f09dd1e1c5bb4bf started for 6260dd97a3e39eba9cd6
=== Container logs for 6260dd97a3e39eba9cd6 ===
  File "/snippet.py", line 16
    print 'Usando PyGTK 2'
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6260dd97a3e39eba9cd6 ===
[2025-10-29 16:27:19] INFO: Container 411344e932ec4617b399c12d9787759d3f0e0a45843c569f5f09dd1e1c5bb4bf has stopped
